# proAI

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  opencode.json
backend/: .gitignore  alembic.ini  constraints.txt  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  cli.py  main.py
backend/scripts/: active_slate_readiness_report.py  apply_completed_slate_results.py  apply_provider_results.py  audit_current_slates.py  audit_feature_coverage.py  audit_learning_calibration.py  audit_learning_dataset_readiness.py  audit_money_mode.py  audit_prediction_lineage.py  audit_prediction_signal.py  audit_rating_features.py  audit_ready_expansion.py  audit_slate_options.py  audit_sports_scores.py  audit_team_rating_activation_dry_run.py  audit_team_rating_activation_readiness.py  audit_team_rating_coverage.py  audit_team_rating_gate.py  audit_team_rating_shadow.py  audit_ticket_canary_dry_run.py  backfill_results.py  backtest_rating_feature_plan.py  bootstrap_football_data_org.py  bootstrap_football_data_sources.py  bootstrap_thesportsdb_sources.py  compute_team_ratings.py  current_progol_confidence_report.py  diagnose_api_football_fixtures.py  diagnose_pg2338_mapping.py  frontend_smoke.py  hash_password.py  http_load_smoke.py  learning_inventory.py  make_manual_results_template.py  operate_money_mode.py  probe_free_results_source.py  probe_progol_pricing.py  relink_pg2338_mapping.py  relink_slate_team.py  retrain_and_validate.py  (+12 more)
backend/tests/: _learning_seed.py  conftest.py  test_active_slate_scope.py  test_active_slate_selection_metadata.py  test_adaptive_dataset.py  test_cli.py  (+147 more)
(+333 files in other folders)
