[project]
name = "proai-backend"
version = "0.1.0"
description = "proAI backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic>=2.9.0,<3.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "alembic>=1.14.0,<2.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "xgboost>=2.1.0,<3.0.0",
  "pypdf>=5.0.0,<6.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-cov>=5.0.0,<7.0.0",
  "httpx>=0.27.0,<1.0.0",
  "ruff>=0.6.0,<1.0.0",
  "mypy>=2.1.0,<3.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
follow_imports = "silent"
check_untyped_defs = false
disallow_untyped_defs = false
warn_unused_ignores = false
no_implicit_optional = false
exclude = [
  "tests/",
  "alembic/",
  "scripts/",
]

# Per-module strict gates. Anything new and pure (no `self`, no I/O, no
# repositories) lives here so mypy enforces full type annotations
# without us having to fix every legacy mixin first. Add new modules to
# this list as they are extracted and proven safe to type-check fully.
[[tool.mypy.overrides]]
module = [
  "app.services.model_training_math",
  "app.services.model_training_metrics",
  "app.core.ratelimit",
]
check_untyped_defs = true
disallow_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "data*"]
